<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:show_In="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/setting">
            <menu>
                <item android:id="@+id/notification"
                android:title="@string/notification"
                app:actionViewClass="android.widget.Switch"
                android:icon="@drawable/ic_notifications_active_black_24dp"/>
            </menu>
        </item>
        <item android:title="@string/info">
            <menu>
                <item
                    android:title="@string/version_1_0_0"
                    android:icon="@drawable/ic_info_black_24dp"/>
            </menu>
        </item>

    </group>

</menu>