<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="taki.eddine.myapplication.datamodels.MoviesDetailsModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121212"
        tools:context=".MoviesDetails.MoviesDetails">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/detailsappbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/detailscollapsingtoolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:title="@{model.title}"
                app:contentScrim="@android:color/black"
                app:titleEnabled="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <ImageView
                    android:id="@+id/popularicons"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:DetailsImg="@{model.url}"
                    app:layout_anchor="@+id/detailsappbarlayout"
                    app:layout_anchorGravity="center"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="pin"
                    android:id="@+id/detailstoolbar"
                    />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/populartitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/normalb"
                    android:gravity="center"
                    android:text="@{model.title}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="140dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="@dimen/_28sdp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/searchviewbg"
                    android:gravity="center"
                    android:text="@string/vote_average"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/popularvoteaverage"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/normalb"
                    android:gravity="center"
                    android:text="@{model.voteaverage}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/searchviewbg"
                    android:gravity="center"
                    android:text="@string/language"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline4"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline3"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/popularlanguage"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/normalb"
                    android:gravity="center"
                    android:text="@{model.language}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline5"
                    app:layout_constraintEnd_toStartOf="@+id/guideline7"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline4"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/popularpopularity"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="28dp"
                    android:background="@drawable/normalb"
                    android:gravity="center"
                    android:text="@{model.popularity}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.957"
                    app:layout_constraintStart_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toTopOf="@+id/guideline2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="150dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/searchviewbg"
                    android:gravity="center"
                    android:text="@string/popularity"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toTopOf="@+id/guideline"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="44dp"
                    android:background="@drawable/searchviewbg"
                    android:gravity="center"
                    android:text="@string/budget"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toTopOf="@+id/guideline3"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/popularbudget"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="44dp"
                    android:background="@drawable/normalb"
                    android:gravity="center"
                    android:text="@{model.budget}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline7"
                    app:layout_constraintTop_toTopOf="@+id/guideline4"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/popularoverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/normalb"
                    android:gravity="center"
                    android:text="@{model.overview}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_11ssp"
                    app:layout_anchorGravity="center"
                    app:layout_constraintBottom_toTopOf="@+id/guideline6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline5"
                    app:layout_constraintVertical_bias="0.066" />

                <TextView
                    android:id="@+id/popularreleasedate"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/normalb"
                    android:gravity="center"
                    android:text="@{model.releasedate}"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popularoverview"
                    app:layout_constraintVertical_bias="0.067" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintGuide_percent="0.1" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintGuide_percent="0.27" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintGuide_percent="0.34" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintGuide_percent="0.42" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintGuide_percent="0.89" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintGuide_begin="20dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addfav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border_black_24dp"
            app:layout_anchorGravity="bottom|end"
            android:layout_margin="10dp"
            app:layout_anchor="@id/detailsappbarlayout" />




    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>